--- a/css/style.css
+++ b/css/style.css
@@ -12,21 +12,14 @@
 
 
 nav{
-    height: 100px;
-    width: 100%;
     background: #FAFAFA;
     border-bottom: 1px solid #1CBCD7;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-#links>a {
-    margin-left: 1em;
 
 }
 
-.home, .link{
+
+
+#brand, .link{
     color: #303C41;
     font-size: 30px;
     -webkit-transition: all .5s ease-in-out;
@@ -44,8 +37,31 @@ h1{
     font-size: 60px;
 }
 
+#competences{
+    background: #FAFAFA;
+    border: 1px solid  #1CBCD7;
 
 
+}
+
+.svg{
+    height: 250px;
+}
+
+.svg:hover{
+    height:275px;
+    -webkit-transition: all .5s ease-in-out;
+
+}
+
+
+.footerBut{
+    height: 100px;
+}
+
+.border-right {
+    border-right: 1px solid black;
+}
 
 
 
@@ -57,7 +73,6 @@ h1{
 
 
 footer{
-    width:100%;
     height: 150px;
     background: #303C41;
 }
